--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,8 @@ install:
   - sudo apt-get -qq -y install qttools5-dev qttools5-dev-tools
 
 before_script:
-  - pushd /tmp
+  - pushd 3rdparty
+  - git clone https://github.com/osakared/qwt.git -b tags/qwt-6.1.3
   - popd
 
 script:
